css/main.css
@font-face {
  font-family: 'Cantarell';
  src: url('../assets/fonts/Cantarell-VF.otf') format('opentype');
}

@font-face {
  font-family: 'Comfortaa';
  src: url('../assets/fonts/Comfortaa-Light.otf') format('opentype');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'Comfortaa';
  src: url('../assets/fonts/Comfortaa-Regular.otf') format('opentype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Comfortaa';
  src: url('../assets/fonts/Comfortaa-Medium.otf') format('opentype');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Comfortaa';
  src: url('../assets/fonts/Comfortaa-SemiBold.otf') format('opentype');
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: 'Comfortaa';
  src: url('../assets/fonts/Comfortaa-Bold.otf') format('opentype');
  font-weight: 700;
  font-style: normal;
}

* {
  font-family: "Cantarell", sans-serif;
  box-sizing: border-box;
}

code,
kbd,
pre,
samp,
var {
  font-family: "Adwaita Mono", monospace;
}

body {
  margin: 0;
}

body>header {
  position: relative;
  color: white;
}

#tituloCabecera {
  position: absolute;
  /* top a mitad y transform para subirlo la altura del elemento.
     Forma de centrar sin usar flexbox. */
  top: 50%;
  transform: translateY(-50%);
  margin: 0;
  width: 100%;
  font-family: Comfortaa, sans-serif;
  font-weight: 700;
  font-size: 4em;
  text-align: center;
  /* Sombra para mejorar la legibilidad con la capa oscura
     que ahora he puesto sobre la imagen ya no hace tanta
     falta pero también mejora la apariencia. */
  text-shadow: 1px 1px 8px black;
  /* Necesario para que la capa oscura de imagen no quede encima del texto. */
  z-index: 2;
}

.imagenCabecera {
  /* Uso posición relativa para que el caption no se posicione encima del borde del elemento si se decide ponerlo. */
  position: relative;
  margin: 0;
}

.imagenCabecera.inactiva {
  transition: opacity 1.5s;
  position: absolute;
  width: 100%;
  top: 0;
  /* Se hace fade-in out de una a otra por lo que no sería
     estrictamente necesario, pero así aseguramos que si ambas
     quedan visibles, la activa sea la queda por encima. */
  z-index: 1;
  /* Dado que la capa inactiva está encima para que el efecto de
     transición sea el desvanecimiento de esta, es necesario hacer
     que dicha capa no haga caso a los eventos del ratón si queremos
     por ejemplo poder seleccionar el texto de caption de la activa
     que está por debajo. */
  pointer-events: none;
}

.imagenCabecera>figcaption {
  position: absolute;
  top: 0;
  padding: 2px;
  font-size: 0.8em;
  text-shadow: 1px 1px 1px black;
  border-color: white;
  border-style: solid;
  border-width: 0 1px 1px 0;
  border-radius: 0 0 5px 0;
  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(80, 80, 80, 0.5));
  backdrop-filter: blur(30px) brightness(70%);
  z-index: 1;
}

/* Capa oscura sobre la imagen para mejorar la legibilidad */
.imagenCabecera::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
}

.imagenCabecera>img {
  /* Ponerlo como block evita que su div contenedor reserve una
     línea de texto debajo */
  display: block;
  /* ajustamos 100% de ancho con altura máxima y mínima redimensionando
     la imagen hasta que cubra el espacio manteniendo su relación de aspecto */
  width: 100%;
  min-height: 220px;
  max-height: 220px;
  object-fit: cover;
}

.flexContainer {
  display: flex;
  flex-flow: row wrap;
}

